fixed layout issues

--- a/public/stylesheets/sass/main.sass
+++ b/public/stylesheets/sass/main.sass
@@ -121,6 +121,10 @@ legend
     margin: 10px
     padding: 5px
     display: inline-block
+    zoom: 1
+    *display: inline
+    
+    vertical-align: top
 
     li.editableItem
       border: 1px solid green
